<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                style="@style/Transaction_Item"
                android:text="@string/type"
                />

        <Spinner
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/transaction_add_item_long_spinner"
                />

        <TextView
                style="@style/Transaction_Item"
                android:text="@string/item"
                />

        <EditText
                android:id="@+id/transaction_add_item_long_name"
                style="@style/Transaction_Item"
                android:hint="@string/what_kind"
                android:autofillHints="@string/what_kind"
                android:importantForAutofill="auto"
                android:maxLines="1"
                android:lines="1"
                android:inputType="textAutoComplete"
                />


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                style="@style/Transaction_Item"
                android:text="@string/amount"
                />

        <EditText
                style="@style/Transaction_Item"
                android:id="@+id/transaction_add_item_long_value"
                android:inputType="numberDecimal"
                android:importantForAutofill="no"
                android:hint="@string/zero"
                android:maxLines="1"
                android:lines="1"
                />

        <TextView
                style="@style/Transaction_Item"
                android:text="@string/owner"
                />

        <EditText
                style="@style/Transaction_Item"
                android:id="@+id/transaction_add_item_long_maker"
                android:hint="@string/who"
                android:importantForAutofill="yes"
                android:maxLines="1"
                android:lines="1"
                android:inputType="textPersonName"
                />


    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                style="@style/Transaction_Item"
                android:text="@string/date"
                />

        <EditText
                style="@style/Transaction_Item"
                android:id="@+id/transaction_add_item_long_date"
                android:hint="@string/date"
                android:maxLines="1"
                android:lines="1"
                android:inputType="date"
                />

        <TextView
                style="@style/Transaction_Item"
                />

        <TextView
                style="@style/Transaction_Item"
                />


    </LinearLayout>


</LinearLayout>