<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ledger"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ledger_view_recyclerView"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintVertical_bias="0.051">

        <TextView
                android:text="LedgerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LargerText"
                android:id="@+id/ledger_view_ledger_name"
                />

    </RelativeLayout>


    <TextView
            android:text="@string/current_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SmallerText"
            android:id="@+id/ledger_view_current_balance_indicator"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ledger_view_add_button"
            app:layout_constraintVertical_bias="0.947"/>

    <TextView
            android:text="9000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SmallerText"
            android:id="@+id/ledger_view_current_balance_display"
            app:layout_constraintStart_toEndOf="@+id/ledger_view_current_balance_indicator"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ledger_view_add_button"
            app:layout_constraintVertical_bias="0.947"/>

    <TextView
            android:text="JAN 19 - FEB 19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SmallerText"
            android:id="@+id/ledger_view_time_period_display"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ledger_view_recyclerView"
            app:layout_constraintVertical_bias="0.6"/>

    <TextView
            android:text="@string/time_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SmallerText"
            android:id="@+id/ledger_view_time_period_indicator"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ledger_view_recyclerView"
            app:layout_constraintStart_toEndOf="@+id/ledger_view_current_balance_display"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/ledger_view_time_period_display"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.725"
            app:layout_constraintVertical_bias="0.6"/>

    <Button
            android:text="@string/add"
            style="@style/ActionButtonStyle"
            android:id="@+id/ledger_view_add_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/ledger_view_recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="395dp"
            android:layout_height="533dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0"
            android:id="@+id/ledger_view_recyclerView"/>


</android.support.constraint.ConstraintLayout>
